@@ -20,9 +20,8 @@ from twisted.internet import reactor
 
 from flumotion.component import feedcomponent
 from flumotion.component.component import moods
-from flumotion.common import gstreamer, messages, documentation
+from flumotion.common import messages
 from flumotion.common.i18n import N_, gettexter
-from flumotion.component.consumers.applestreamer import mpegtssegmenter
 
 T_ = gettexter()
 
@@ -30,57 +29,10 @@ T_ = gettexter()
 class MPEGTS(feedcomponent.MuxerComponent):
     checkTimestamp = True
 
-    """
-    The mpegts-muxer component muxes a video and an audio stream into an
-    MPEG-TS stream and copies the keyframes' OFFSET_END, increased by one for
-    each keyframe, to the outgoing mpegts buffers for synchronisation purpose.
-
-    At the muxer level,the synchronisation is done increasing the buffer offset
-    for each keyframe and writting it to the outgoing MPEG-TS packet marked as
-    keyframes. If the video encoder uses the OFFSET_END as a counter for
-    keyframes, we use this value, otherwhise we use an internal counter
-    increased on each video keyframe.
-
-    If the muxed stream contains video,mpegtsmux will unset the delta unit flag
-    for the output MPEG-TS buffers containing a video keyframe and we only need
-    to rewrite the offset of these buffers.
-
-    If the muxed stream only contains audio, we need to mark all the audio
-    buffers as delta unit and unset this flag for the first audio buffer after
-    the video keyframe. NB: this will only works if mpegtsmux also takes in
-    count audio stream for detecting non delta unit"""
-
-    def do_check(self):
-        exists = gstreamer.element_factory_exists('mpegtsmux')
-        if not exists:
-            m = messages.Error(T_(N_(
-                        "%s is missing. Make sure your %s "
-                        "installation is complete."),
-                        'mpegtsmux', 'mpegtsmux'))
-            documentation.messageAddGStreamerInstall(m)
-            self.debug(m)
-            self.addMessage(m)
-            return
-
-        v = gstreamer.get_plugin_version('mpegtsmux')
-        # The mpegtsmuxer does not use the delta unit flag to mark keyframes
-        # until gst-plugin-bad-0.10.18. Patched versions in the platform
-        # will be numberer using minor=10 to check if the plugin has been
-        # patched
-        if v is None:
-            m = messages.Warning(T_(N_("GStreamer mpegtsmux not found")))
-            self.addMessage(m)
-        elif v <= (0, 10, 17, 0) and v[3] != 11:
-            m = messages.Warning(
-                T_(N_("Versions up to and including %s of the '%s' "
-                      "GStreamer plug-in are not suitable for "
-                      "fragmented streaming.\n"),
-                      '0.10.17', 'mpegtsmux'))
-            self.addMessage(m)
+    bufqueue = []
 
     def get_muxer_string(self, properties):
         muxer = 'mpegtsmux name=muxer pat-interval=%d pmt-interval=%d '\
-            '! flumpegtssegmenter keyframes-per-segment=1'\
             % (sys.maxint, sys.maxint)
         return muxer
 
@@ -93,12 +45,9 @@ class MPEGTS(feedcomponent.MuxerComponent):
         feedcomponent.MuxerComponent.configure_pipeline(self,
             pipeline, properties)
         self.muxer = pipeline.get_by_name("muxer")
-        self.muxer.get_pad("src").add_buffer_probe(self._srcPadProbe)
+        self.muxer.get_pad("src").add_data_probe(self._src_data_probe)
         self.audio_only = properties.get("audio-only", False)
         self.has_video = False
-        self._inOffset = 0L
-        self._count = 0L
-        self._last_kf_ts = 0L
         self.eaters_linked = []
 
     def _handle_error(self, message, debug_message=""):
@@ -156,43 +105,11 @@ class MPEGTS(feedcomponent.MuxerComponent):
         if "audio" in struct_name:
             return self._link_pad(src_pad, self.muxer, caps, eaterAlias)
 
-    def _do_sync(self, buffer):
-        # Audio buffer
-        if 'audio' in buffer.get_caps()[0].get_name():
-            # audio buffers are all 'keyframes' and the DELTA_UNIT flag is set
-            # for all of them. We need to unset this flag to help the muxer
-            # marking keyframes properly
-            buffer.flag_set(gst.BUFFER_FLAG_DELTA_UNIT)
-            # if we have only audio, the first audio buffer after the keyframe
-            # must be marked has a keyframe
-            if self.audio_only and self._last_kf_ts != gst.CLOCK_TIME_NONE and\
-                buffer.timestamp >= self._last_kf_ts:
-                buffer.flag_unset(gst.BUFFER_FLAG_DELTA_UNIT)
-                self._last_kf_ts = gst.CLOCK_TIME_NONE
-            return True
-        # Video buffer
-        # if the buffer is a keyframe take the offset an store it for the
-        # outgoing MPEG-TS packets.
-        if not buffer.flag_is_set(gst.BUFFER_FLAG_DELTA_UNIT):
-            if buffer.offset_end != gst.BUFFER_OFFSET_NONE:
-                self._inOffset = buffer.offset_end
-            else:
-                self._inOffset = self._count
-                self._count += 1
-            # update the last keyframe's timestamp for audio-only
-            # sinchronization
-            self._last_kf_ts = buffer.timestamp
-        return True
-
     def buffer_probe_cb(self, a, buffer, depay, eaterAlias):
         # try to link the eater if it is not linked yet
         if eaterAlias not in self.eaters_linked:
             self._link_eater(depay.get_pad("src"), buffer, eaterAlias)
-        # process the buffer for the synchronisation mechanism
-        return self._do_sync(buffer)
+        return True
 
-    def _srcPadProbe(self, pad, buffer):
-        # set the stored offset if the outgoing buffer is a keyframe
-        if not buffer.flag_is_set(gst.BUFFER_FLAG_DELTA_UNIT):
-            buffer.offset = self._inOffset
+    def _src_data_probe(self, pad, data):
         return True
